--- a/cadastro.html
+++ b/cadastro.html
@@ -69,6 +69,12 @@
 			<label for="n_convenio">Número do Convênio</label>
 			<input name="n_convenio" type="text"><br>
 
+			<select name="Convenio" id="fodae">
+				<option value="unimed">unimed</option>
+				<option value="provida">provida</option>
+				<option value="ami">ami</option>
+			</select>
+
 		</div>
 		
 		
